--- a/index.html
+++ b/index.html
@@ -1,9 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Gallery</title>
+    <title>Lakshdeep S. Bajwa</title>
+    <link rel="stylesheet" href="assets/reset.css">
+    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="https://fonts.google.com/specimen/Montserrat?selection.family=Montserrat">
 </head>
 <body>
-    <h1>test</h1>
+
+    <div class="sidenav">
+        <a href="#">About</a>
+        <a href="#gallery">Gallery</a>
+        <a href="https://github.com/bajwals">Github</a>
+        <a href="contact.html">Contact Me</a>
+        <a href="http://www.google.com/" style="position: fixed; bottom: 50px;">Need Help?</a>
+    </div>
+
+    <div class="content">
+
+        <div class="top-content">
+
+            <div class="my-name">
+                <p>Lakshdeep S. Bajwa</p>
+            </div>
+
+            <div class="bio">
+                <p>Lakshdeep Bajwa currently works as a teacher for an after school care enrichment program at Rock Creek Elementary School located in Rocklin, CA. Since 2012, he has implemented STEM into his cirriculum to enrich young children's lives by facilitating project-based learning. Some examples of work completed by elementary school age children include a fully functioning completely custom arcade cabinet from scratch.</p>
+            </div> 
+
+        </div>
+
+    <div class="photos">
+
+        <div class="top-row">
+            
+            <div class="gallery">
+                <a target="_blank" href="assets/images/family.jpg">
+                    <img src="assets/images/family.jpg" alt="Family" width="300" height="200" style="margin-left: 50px"></a>
+                <div class="caption"><p>Oregon Coast</p><div class="caption2">August 2019</div></div>
+            </div>
+
+            <div class="gallery">
+                <a target="_blank" href="assets/images/m3.jpg">
+                    <img src="assets/images/m3.jpg" alt="m3" width="300" height="200" style="margin-left: 50px"></a>
+                <div class="caption"><p>Chiemsee, Germany</p><div class="caption2">Summer 2017</div></div>
+            </div>
+
+        </div>
+
+        <div class="bottom-row">
+
+            <div class="gallery">
+                <a target="_blank" href="assets/images/lotus.jpg">
+                    <img src="assets/images/lotus.jpg" alt="car-wash" width="270" height="200" style="margin-left: 50px"></a>
+                <div class="caption"><p>Driving a Lotus Evora</p><div class="caption2">October 2016</div></div>
+            </div>
+
+            <div class="gallery">
+                <a target="_blank" href="assets/images/scotland.jpg">
+                    <img src="assets/images/scotland.jpg" alt="scotland" width="300" height="200" style="margin-left: 50px"></a>
+                <div class="caption"><p>Scottish Highlands</p><div class="caption2">Summer 2015</div></div>
+            </div>
+
+        </div>    
+
+    </div>
+    
+    </div>
+
 </body>
 </html>
