--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Contact Me</title>
+    <title>Lakshdeep S. Bajwa</title>
     <link rel="stylesheet" href="assets/reset.css">
     <link rel="stylesheet" href="assets/styles.css">
     <link rel="stylesheet" href="https://fonts.google.com/specimen/Montserrat?selection.family=Montserrat">
@@ -9,9 +10,11 @@
 <body>
 
     <div class="sidenav">
-        <a href="#">About</a>
+        <a href="index.html">About</a>
         <a href="#gallery">Gallery</a>
         <a href="https://github.com/bajwals">Github</a>
+        <a href="contact.html">Contact Me</a>
+        <a href="http://www.google.com/" style="position: fixed; bottom: 50px;">Need Help?</a>
     </div>
 
     <div class="content">
