--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="sidenav">
-        <a href="#">About</a>
+        <a href="index.html">About</a>
         <a href="#gallery">Gallery</a>
         <a href="https://github.com/bajwals">Github</a>
         <a href="contact.html">Contact Me</a>
